# learning-jax

./: .gitignore  README.md  SETUP.md  pyproject.toml
JAX/: JAX Roadmap.md  auto_vec.ipynb  autodiff.ipynb  jit.ipynb  pytrees.ipynb  quickstart.ipynb  sharp_bits.ipynb
NumPy/: 100_Numpy_exercises.ipynb  einsum.ipynb  einsum.md
NumPy/numpy-100-master/: 100_Numpy_exercises.ipynb
Python/: Python Roadmap.md  numpy.ipynb
Python/Object Model/: boxing.ipynb  loops.ipynb  numpy.ipynb  stats.out
Scaling Book/: roofline.ipynb
